Fix missing background color on table rows denoting seat state.
A recent commit removed some specificity from the CSS selectors that apply the background colors to data displays involving Carry Over, Vacant, and Term Ends Soon states. Because these rules affect a minimal amount of properties, and conveying state is a high priority, applying !important declarations should be acceptable in this case.

--- a/public/css/local/screen.scss
+++ b/public/css/local/screen.scss
@@ -99,9 +99,11 @@
     }
 }
 
-div.carryOver,    tr.carryOver    td { background-color: #ed9a9c; }
-div.vacant,       tr.vacant       td { background-color: #ed9a9c; }
-div.termEndsSoon, tr.termEndsSoon td { background-color: #edea9a; }
+// The following rules are state-based rules that override default rules
+// with more specific selectors.
+div.carryOver,    tr.carryOver    td { background-color: #ed9a9c !important; }
+div.vacant,       tr.vacant       td { background-color: #ed9a9c !important; }
+div.termEndsSoon, tr.termEndsSoon td { background-color: #edea9a !important; }
 
 tr.carryOver    td:first-child:before,
 tr.vacant       td:first-child:before,
